syntax = "proto3";

option java_package = "io.morethan.tweaky.conductor.proto";
option java_outer_classname = "ConductorProto";
option java_multiple_files = false;

service Conductor {
  rpc NodeCount (NodeCountRequest) returns (NodeCountReply);
}

message NodeCountRequest {}
message NodeCountReply {
    int32 count = 1;
}
